[gd_scene load_steps=9 format=3 uid="uid://dwmbidq7floxi"]

[ext_resource type="Script" uid="uid://bceaksremaqo5" path="res://Scripts/UI/MainMenu.gd" id="1_wp2d5"]
[ext_resource type="Texture2D" uid="uid://d1emr6411vte" path="res://Assets/UI/menu.png" id="2_807am"]
[ext_resource type="FontFile" uid="uid://bp625sncpuuld" path="res://Assets/UI/CustomFontTtf16H30ForPaint.ttf" id="2_p6v0c"]
[ext_resource type="AudioStream" uid="uid://1b0kl2c8vqnw" path="res://Assets/music_1.wav" id="4_t5vrq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kmjo7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 6
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nv8tm"]
bg_color = Color(0.313726, 0.380392, 0.776471, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 3
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eauue"]
bg_color = Color(0.654902, 0.552941, 0.568627, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 6
shadow_offset = Vector2(0, 3)

[sub_resource type="Theme" id="Theme_pderx"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wp2d5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 116.0
offset_top = 83.0
offset_right = 1400.0
offset_bottom = 805.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_807am")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = 26.0
offset_right = 208.0
offset_bottom = 326.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="StartGame" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_colors/font_hover_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_colors/font_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_colors/font_focus_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_colors/font_pressed_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_fonts/font = ExtResource("2_p6v0c")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_kmjo7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nv8tm")
theme_override_styles/normal = SubResource("StyleBoxFlat_eauue")
text = "Start game"

[node name="Options" type="Button" parent="CanvasLayer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_colors/font_hover_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_colors/font_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_colors/font_focus_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_colors/font_pressed_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_fonts/font = ExtResource("2_p6v0c")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_kmjo7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nv8tm")
theme_override_styles/normal = SubResource("StyleBoxFlat_eauue")
text = "Options"

[node name="Credits" type="Button" parent="CanvasLayer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_colors/font_hover_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_colors/font_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_colors/font_focus_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_colors/font_pressed_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_fonts/font = ExtResource("2_p6v0c")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_kmjo7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nv8tm")
theme_override_styles/normal = SubResource("StyleBoxFlat_eauue")
text = "Credits"

[node name="Exit" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_pderx")
theme_override_colors/font_hover_pressed_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_colors/font_hover_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_colors/font_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_colors/font_focus_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_colors/font_pressed_color = Color(0.168627, 0.156863, 0.254902, 1)
theme_override_fonts/font = ExtResource("2_p6v0c")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_kmjo7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nv8tm")
theme_override_styles/normal = SubResource("StyleBoxFlat_eauue")
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_t5vrq")
autoplay = true
bus = &"BGM"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
